--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "bcrypt": "^5.1.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "formik": "^2.4.6",
+    "formik": "^3.0.0-next.8",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.464.0",
     "mongoose": "^8.8.3",
